# tripod

./: CMakeLists.txt  README.md  model.cpp
cmake/: FindOpenSim.cmake
